tests/cases/fail/dict_values_args.p4
def main() -> None:
    colors: dict[str, str] = {"apple": "red"}
    print(colors.values("bad"))
